crates/rimap-content/tests/snapshots/snapshots__snapshot_one@html-remote-image-tracker.snap
---
source: crates/rimap-content/tests/snapshots.rs
expression: value
---
{
  "meta": {
    "attachments": [],
    "body_truncated": false,
    "cc": [],
    "date": null,
    "from": "sender@example.com",
    "in_reply_to": null,
    "mailing_list": null,
    "message_id": null,
    "original_size_bytes": 266,
    "references": [],
    "subject": "Welcome",
    "to": [
      "victim@example.com"
    ]
  },
  "security_warnings": [
    {
      "code": "html_remote_image_stripped",
      "detail": "count=1",
      "location": "body:html"
    }
  ],
  "untrusted": {
    "alternate_parts": [],
    "body_html": "<p>Thanks for subscribing.</p><img alt=\"\" width=\"1\" height=\"1\">\n",
    "body_text": "Thanks for subscribing."
  }
}
