crates/rimap-content/tests/snapshots/snapshots__snapshot_one@html-tokenizer-divergence.snap
---
source: crates/rimap-content/tests/snapshots.rs
expression: value
---
{
  "meta": {
    "attachments": [],
    "body_truncated": false,
    "cc": [],
    "date": null,
    "from": "sender@example.com",
    "in_reply_to": null,
    "mailing_list": null,
    "message_id": null,
    "original_size_bytes": 382,
    "references": [],
    "reply_to": null,
    "subject": "Policy update",
    "to": [
      "victim@example.com"
    ]
  },
  "security_warnings": [
    {
      "code": "html_script_stripped",
      "detail": "count=1",
      "location": "body:html"
    }
  ],
  "untrusted": {
    "alternate_parts": [],
    "body_html": "<p>Notice: please review the policy update.</p>alert(\"cdata-bypass\")]]&gt;\n",
    "body_text": "Notice: please review the policy update."
  }
}
