crates/rimap-content/tests/snapshots/snapshots__snapshot_one@lookalike-homograph-paypal.snap
---
source: crates/rimap-content/tests/snapshots.rs
expression: value
---
{
  "meta": {
    "attachments": [],
    "body_truncated": false,
    "cc": [],
    "date": null,
    "from": "PayPal <service@pаypal.com>",
    "in_reply_to": null,
    "mailing_list": null,
    "message_id": null,
    "original_size_bytes": 274,
    "references": [],
    "reply_to": null,
    "subject": "Your balance",
    "to": [
      "victim@example.com"
    ]
  },
  "security_warnings": [
    {
      "code": "lookalike_mixed_script",
      "detail": "domain=xn--pypal-4ve.com,unicode=pаypal.com",
      "location": "header:from"
    },
    {
      "code": "lookalike_idn_punycode",
      "detail": "domain=xn--pypal-4ve.com,ulabel=pаypal.com",
      "location": "header:from"
    },
    {
      "code": "lookalike_mixed_script",
      "detail": "domain=xn--pypal-4ve.com,unicode=pаypal.com",
      "location": "html:anchor_href"
    },
    {
      "code": "lookalike_idn_punycode",
      "detail": "domain=xn--pypal-4ve.com,ulabel=pаypal.com",
      "location": "html:anchor_href"
    }
  ],
  "untrusted": {
    "alternate_parts": [],
    "body_html": "<p>Your PayPal balance is ready to withdraw.</p><p><a href=\"https://pаypal.com/login\" rel=\"noopener noreferrer\">Sign in</a></p>\n",
    "body_text": "Your PayPal balance is ready to withdraw. Sign in"
  }
}
